# guidebook

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  book.json  install.sh
.github/workflows/: docs.yml  release.yml
docs/: LANGS.md  book.json
docs/en/: README.md  SUMMARY.md  config.md  faq.md  installation.md  migration.md  quick-start.md  structure.md
docs/en/features/: README.md  collapsible.md  mermaid.md  multi-language.md  search.md
docs/ja/: README.md  SUMMARY.md  config.md  faq.md  installation.md  migration.md  quick-start.md  structure.md
docs/ja/features/: README.md  collapsible.md  mermaid.md  multi-language.md  search.md
docs/vi/: README.md  SUMMARY.md  config.md  faq.md  installation.md  migration.md  quick-start.md  structure.md
docs/vi/features/: README.md  collapsible.md  mermaid.md  multi-language.md  search.md
src/: main.rs
src/builder/: mod.rs  renderer.rs  template.rs
src/parser/: book_config.rs  frontmatter.rs  glossary.rs  summary.rs
templates/: collapsible.js  gitbook.css  gitbook.js  search.js
